--- a/backend/package.json
+++ b/backend/package.json
@@ -23,5 +23,11 @@
     "nodemon": "^2.0.15",
     "sanitize-html": "^2.7.0",
     "xss-clean": "^0.1.1"
+  },
+  "devDependencies": {
+    "@types/cors": "^2.8.12",
+    "@types/express": "^4.17.13",
+    "@types/hpp": "^0.2.2",
+    "@types/node": "^17.0.35"
   }
 }
