--- a/backend/package.json
+++ b/backend/package.json
@@ -3,9 +3,9 @@
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
-  "type": "module",
   "scripts": {
-    "test": "mocha"
+    "test": "mocha -r ts-node/register 'test/**/*.ts'",
+    "server": "npx nodemon ./index.ts"
   },
   "keywords": [],
   "author": "",
@@ -28,6 +28,9 @@
     "@types/cors": "^2.8.12",
     "@types/express": "^4.17.13",
     "@types/hpp": "^0.2.2",
-    "@types/node": "^17.0.35"
+    "@types/mocha": "^9.1.1",
+    "@types/node": "^17.0.35",
+    "ts-mocha": "^10.0.0",
+    "ts-node": "^10.8.0"
   }
 }
