--- a/backend/package.json
+++ b/backend/package.json
@@ -5,7 +5,8 @@
   "main": "index.js",
   "scripts": {
     "test": "mocha -r ts-node/register 'test/**/*.ts'",
-    "server": "npx nodemon ./index.ts"
+    "dev": "npx nodemon ./index.ts",
+    "prod": "ts-node ./index.ts"
   },
   "keywords": [],
   "author": "",
