--- a/package.json
+++ b/package.json
@@ -3,9 +3,11 @@
     "version": "1.0.0",
     "description": "",
     "scripts": {
-      "start": "ts-node ./backend/index.ts",
+      "start": "node ./backend/dist/index.ts",
+      "postinstall": "tsc",
       "heroku-postbuild": "cd frontend && npm i && npm run build"
     },
+    "engines": { "node": "16.14.12" },
     "keywords": [],
     "author": "",
     "license": "ISC"
