--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
     },
     "engines": { "node": "16.14.2" },
     "dependencies": {
-        "tsc": "4.6.4"
+        "typescript": "4.6.4"
       },
     "keywords": [],
     "author": "",
