--- a/package.json
+++ b/package.json
@@ -10,7 +10,11 @@
     },
     "engines": { "node": "16.14.2" },
     "dependencies": {
-        "typescript": "4.6.4"
+        "typescript": "4.6.4",
+        "@types/mocha": "^9.1.1",
+        "@types/node": "^17.0.35",
+        "ts-mocha": "^10.0.0",
+        "ts-node": "^10.8.0"    
       },
     "keywords": [],
     "author": "",
