--- a/package.json
+++ b/package.json
@@ -10,7 +10,22 @@
     },
     "engines": { "node": "16.14.2" },
     "dependencies": {
+        "cors": "^2.8.5",
+        "dotenv": "^16.0.0",
+        "express": "^4.17.3",
+        "express-mongo-sanitize": "^2.2.0",
+        "express-rate-limit": "^6.4.0",
+        "helmet": "^5.0.2",
+        "hpp": "^0.2.3",
+        "mocha": "^9.2.2",
+        "mongoose": "^6.2.10",
+        "nodemon": "^2.0.15",
+        "sanitize-html": "^2.7.0",
+        "xss-clean": "^0.1.1",
         "typescript": "4.6.4",
+        "@types/cors": "^2.8.12",
+        "@types/express": "^4.17.13",
+        "@types/hpp": "^0.2.2",
         "@types/mocha": "^9.1.1",
         "@types/node": "^17.0.35",
         "ts-mocha": "^10.0.0",
