--- a/package.json
+++ b/package.json
@@ -5,8 +5,8 @@
     "main": "./backend/dist/index.js",
     "scripts": {
       "start": "node ./backend/dist/index.js",
-      "tsc": "tsc --project ./backend/tsconfig.json",
-      "postinstall": "npm run tsc",
+      "build-backend": "tsc --project ./backend/tsconfig.json",
+      "postinstall": "npm run build-backend",
       "build-frontend": "cd frontend && npm i && npm run build"
     },
     "engines": { "node": "16.14.2" },
