--- a/.gitignore
+++ b/.gitignore
@@ -2,3 +2,15 @@
 node_modules
 dist
 build
+
+.terraform
+terraform.tfstate
+test.tfvars
+/terraform/.env
+
+##Github
+.github/.vscode/
+
+.vscode
+.DS_Store
+.idea
