--- a/backend/package.json
+++ b/backend/package.json
@@ -15,6 +15,7 @@
     "cors": "^2.8.5",
     "dotenv": "^16.0.0",
     "express": "^4.17.3",
+    "express-actuator": "^1.8.4",
     "express-mongo-sanitize": "^2.2.0",
     "express-rate-limit": "^6.4.0",
     "helmet": "^5.0.2",
@@ -28,6 +29,7 @@
   "devDependencies": {
     "@types/cors": "^2.8.12",
     "@types/express": "^4.17.13",
+    "@types/express-actuator": "^1.8.0",
     "@types/hpp": "^0.2.2",
     "@types/mocha": "^9.1.1",
     "@types/node": "^17.0.35",
